<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"

    tools:context=".ui.slideshow.SlideshowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gambartutorial"
                android:layout_width="192dp"
                android:layout_height="122dp"
                android:layout_weight="1"
                android:contentDescription="tesfotostmkg"
                android:src="@drawable/foto_halaman_splash" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tutorial_Penggunaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tutorial Penggunaan"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aplikasi PIBAL KEEP"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="versi 1.0"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />

                <ToggleButton
                    android:id="@+id/toggleButtonRead"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:background="@drawable/buttonbg"
                    android:backgroundTint="@color/teal_200"
                    android:text="ToggleButton"
                    android:textColor="@color/black"
                    android:textOff="READ"
                    android:textOn="CLOSE" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/judul_pemasangan" />

                <TextView
                    android:id="@+id/textViewScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp"
                    android:text="@string/pemasangan" />

                <ImageView
                    android:id="@+id/imageViewScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/foto_pemasangan"
                    android:src="@drawable/foto_contoh_pemasangan" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/judul_cara_penggunaan" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:text="@string/cara_penggunaan" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="450dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/foto_penggunaan"
                    android:src="@drawable/foto_tampilan_home" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/judul_ketentuan_lain" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:text="@string/ketentuan_lain" />



            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>